<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ownglasses.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ownglasses.ui.gallery.GalleryFragment"
        android:label="@string/menu_frame"
        tools:layout="@layout/fragment_frame" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ownglasses.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_lensa"
        tools:layout="@layout/fragment_lensa" />
</navigation>