<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment"
    android:background="@color/merah">

    <ImageView
        android:id="@+id/F_img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        />

    <ImageView
        android:id="@+id/F_logo"
        android:layout_width="172dp"
        android:layout_height="72dp"
        android:layout_below="@id/F_img1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="13dp"

        android:layout_marginRight="-28dp"
        android:src="@drawable/logobrand" />

    <TextView
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FRAME"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/cream"
        android:layout_below="@id/F_img1"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        />

    <LinearLayout
        android:id="@+id/f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/frame"
        android:layout_marginLeft="50dp">

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/frame1"
            android:contentDescription="@string/frame1"
            />

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/frame2"
            android:contentDescription="@string/frame2"
            android:layout_marginLeft="70dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/f2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/f1"
        android:layout_marginLeft="50dp">

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/frame3"
            android:contentDescription="@string/frame3"
            />

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/frame4"
            android:contentDescription="@string/frame4"
            android:layout_marginLeft="70dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/f1"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WAYFARERE"
            android:textColor="@color/cream"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="21dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CATEYE"
            android:textColor="@color/cream"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="120dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_f2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/f2"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RIMLESS"
            android:textColor="@color/cream"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="33dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BULAT"
            android:textColor="@color/cream"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="138dp"
            />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>